Fixed video overlapping on videos page

--- a/src/components/Videos/Videos.css
+++ b/src/components/Videos/Videos.css
@@ -2,12 +2,11 @@
 
 }
 
-.common-Card {
+.common-Card-video {
     position: relative;
     background-color: #fff;
     border-radius: 8px;
     padding: 30px;
-    width: 350px;
     -webkit-box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3);
     box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3);
 }
